--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "keen-slider": "^6.8.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
